fix: correction pour créer des disponibilités un jour a la fois - stocke des disponibilités dans le repository pour une date lorsqu'elles n'existent pas -valide que la creation de la reservation est avant l'heure d'ouverture du restaurant